[package]
name = "nautobot-gitlab-webhook"
version = "0.1.0"
authors = ["Fred Hsu <fredlhsu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json","multipart"] }
warp = "0.3"
serde_json = "1.0"
